# hutil

./: README.md  pyproject.toml  setup.py
examples/: catalog_example.py  enhanced_plotting_example.py  satellite_transect_updated.py  simple_example.py  test_plotting.py  uganda_selection.ipynb
examples/notebooks/: basic_usage.ipynb  catalog_example.ipynb  enhanced_plotting.ipynb  enhanced_satellite_transect.ipynb  satellite_transect.ipynb
hutil/: __init__.py  accessor.py  plotting.py  selection.py
hutil/data/: ECA_J_CPR_NOM_1BS_20240617T1356_20240617T1407_00306F_vAb_location.nc  combined_uganda.dbf  combined_uganda.shp  combined_uganda.shx  satellite_transect.nc
tests/: __init__.py  conftest.py  test_accessor.py  test_selection.py
